--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "livekit-server-sdk": "^2.12.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router-dom": "^7.5.0"
+    "react-router-dom": "^7.5.0",
+    "react-speech-recognition": "^4.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
@@ -29,6 +30,7 @@
     "@types/node": "^22.13.10",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
+    "@types/react-speech-recognition": "^3.9.6",
     "@vitejs/plugin-react": "^4.3.4",
     "dotenv": "^16.4.7",
     "eslint": "^9.21.0",
